update 2.0 blog post wrt #7660

--- a/website/blog/2020-03-21-2.0.0.md
+++ b/website/blog/2020-03-21-2.0.0.md
@@ -89,6 +89,10 @@ Also, the order in which files are processed has changed. Previously, all the fi
 formatting. Now, their order corresponds to the order of the specified paths. For each path, the list of resolved
 files is sorted, but the full sorting of the resulting combined list isn't done anymore.
 
+There are also changes in how Prettier CLI reports errors if passed patterns don't match any files. Previously, Prettier CLI
+printed a "No matching files" error if it couldn't find any files at all—for all the patterns together, not for an individual pattern.
+In Prettier 2.0, the CLI also prints such errors for individual patterns.
+
 ## Breaking changes
 
 ### API
