--- a/website/blog/2020-03-21-2.0.0.md
+++ b/website/blog/2020-03-21-2.0.0.md
@@ -168,6 +168,8 @@ It may be also worth [checking the option docs](https://prettier.io/docs/en/opti
 This will help you avoid a mix of line endings in the repo and a broken `git blame`.
 If the old behavior is still preferred, please configure Prettier with `{ "endOfLine": "auto" }`.
 
+If you use Travis CI, be aware of [the `autocrlf` option](https://docs.travis-ci.com/user/customizing-the-build#git-end-of-line-conversion-control) in `.travis.yml`.
+
 #### Cache plugin search results ([#7485](https://github.com/prettier/prettier/pull/7485) by [@fisker](https://github.com/fisker))
 
 Previously, Prettier searched the file system for plugins on every `prettier.format` call. Now, search results are cached. The cache can be cleared by calling `prettier.clearConfigCache()`.
