Update changelog Template

--- a/changelog_unreleased/html/pr-7867.md
+++ b/changelog_unreleased/html/pr-7867.md
@@ -1,23 +1,36 @@
 #### Fix ignored empty inline element print ([#7867](https://github.com/prettier/prettier/pull/7867) by [@fisker](https://github.com/fisker))
 
+Input:
+
 <!-- prettier-ignore -->
 ```html
-<!--Input-->
 <!--prettier-ignore--><span></span>
 <!--prettier-ignore--><span>_</span>
+```
 
-<!--Prettier stable-->
+Prettier stable:
+
+<!-- prettier-ignore -->
+```html
 <!--prettier-ignore--><span
 ></span>
 <!--prettier-ignore--><span>_</span>
+```
 
-<!--Prettier stable (Second format)-->
+Prettier stable (Second format):
+
+<!-- prettier-ignore -->
+```html
 <!--prettier-ignore--><span
 
 ></span>
 <!--prettier-ignore--><span>_</span>
+```
 
-<!--Prettier master-->
+Prettier master:
+
+<!-- prettier-ignore -->
+```html
 <!--prettier-ignore--><span></span>
 <!--prettier-ignore--><span>_</span>
 ```
