--- a/changelog_unreleased/javascript/pr-7877.md
+++ b/changelog_unreleased/javascript/pr-7877.md
@@ -1,6 +1,4 @@
-#### Fix prettier-ignore inside JSX ([#7877](https://github.com/prettier/prettier/pull/7877) by [@fisker](https://github.com/fisker))
-
-Optional description if it makes sense.
+#### Fix `prettier-ignore` inside JSX ([#7877](https://github.com/prettier/prettier/pull/7877) by [@fisker](https://github.com/fisker))
 
 <!-- prettier-ignore -->
 ```jsx
