--- a/changelog_unreleased/javascript/pr-7891.md
+++ b/changelog_unreleased/javascript/pr-7891.md
@@ -1,10 +1,11 @@
-
 #### Uniform line endings for multi line strings/comments ([#7891](https://github.com/prettier/prettier/pull/7891) by [@sidharthv96](https://github.com/sidharthv96))
 
-To fix [#6501](https://github.com/prettier/prettier/issues/6501)
+Fixes [#6501](https://github.com/prettier/prettier/issues/6501)
+
+Covers all languages
 
 <!-- prettier-ignore -->
-```javascript
+```
 // Input
 const foo = bar(<CRLF>
   (_0: baz) => {<CRLF>
