--- a/changelog_unreleased/css/pr-7933.md
+++ b/changelog_unreleased/css/pr-7933.md
@@ -2,6 +2,8 @@
 
 Previously when `--parser=css` passed, we try `postcss-scss`/`postcss-less` to parse content, this cause confusion, and hard to check syntax error. Now `--parser=css` only works on css syntax.
 
+_If you're setting `parser="css"` for your `.less`/`.scss` file, you'll need update it to correct parser, or let prettier decide._
+
 <!-- prettier-ignore -->
 ```less
 // Input
