--- a/changelog_unreleased/css/pr-7933.md
+++ b/changelog_unreleased/css/pr-7933.md
@@ -6,34 +6,36 @@ _If you're setting `parser="css"` for your `.less`/`.scss` file, you'll need upd
 
 <!-- prettier-ignore -->
 ```less
-// Input
-// Less Syntax with `--parser=css`
-@foo: bar;
+/* Input */
+/* Less Syntax with `--parser=css` */
+a {.bordered();}
 
-// Prettier stable
-// Less Syntax with `--parser=css`
-@foo: bar;
+/* Prettier stable */
+/* Less Syntax with `--parser=css` */
+a {
+  .bordered();
+}
 
-// Prettier master
-SyntaxError: (postcss) CssSyntaxError Unknown word (1:1)
-> 1 | // Less Syntax with `--parser=css`
-    | ^
-  2 | @foo: bar;
+/* Prettier master */
+SyntaxError: (postcss) CssSyntaxError Unknown word (2:4)
+  1 | /* Less Syntax with `--parser=css` */
+> 2 | a {.bordered();}
 ```
 
 <!-- prettier-ignore -->
 ```scss
-// Input
-// Scss Syntax with `--parser=css`
-$foo: bar;
+/* Input */
+/* Scss Syntax with `--parser=css` */
+::before {content: #{$foo}}
 
-// Prettier stable
-// Scss Syntax with `--parser=css`
-$foo: bar;
+/* Prettier stable */
+/* Scss Syntax with `--parser=css` */
+::before {
+  content: #{$foo};
+}
 
-// Prettier master
-SyntaxError: (postcss) CssSyntaxError Unknown word (1:4)
-> 1 | // Scss Syntax with `--parser=css`
-    |    ^
-  2 | $foo: bar;
+/* Prettier master */
+SyntaxError: (postcss) CssSyntaxError Unknown word (2:22)
+  1 | /* Scss Syntax with `--parser=css` */
+> 2 | ::before {content: #{$foo}}
 ```
