--- a/changelog_unreleased/typescript/pr-7948.md
+++ b/changelog_unreleased/typescript/pr-7948.md
@@ -3,7 +3,7 @@
 Optional description if it makes sense.
 
 <!-- prettier-ignore -->
-```jsx
+```typescript
 // Input
 type TypeName<T> =
   T extends string ? "string" :
