--- a/changelog_unreleased/javascript/pr-7891.md
+++ b/changelog_unreleased/javascript/pr-7891.md
@@ -1,60 +1,42 @@
-#### Uniform line endings for multi line strings/comments ([#7891](https://github.com/prettier/prettier/pull/7891) by [@sidharthv96](https://github.com/sidharthv96))
-
-Fixes [#6501](https://github.com/prettier/prettier/issues/6501)
-
-Covers all languages
+#### Fix: line endings were not always converted properly in multiline strings and comments ([#7891](https://github.com/prettier/prettier/pull/7891) by [@sidharthv96](https://github.com/sidharthv96))
 
 <!-- prettier-ignore -->
 ```
 // Input
-const foo = bar(<CRLF>
-  (_0: baz) => {<CRLF>
+export const IAmIncredibleLongFunctionName = IAmAnotherFunctionName(<CRLF>
+  (_0: IAmIncredibleLongParameterType) => {<CRLF>
     setTimeout(() => {<CRLF>
       /*<CRLF>
-          Multiline comment<CRLF>
-          Multiline comment<CRLF>
-          Multiline comment<CRLF>
+        Multiline comment<CRLF>
+        Multiline comment<CRLF>
+        Multiline comment<CRLF>
       */<CRLF>
       console.log(<CRLF>
-        'Multiline string\\<CRLF>
-         Multiline string\\<CRLF>
-         Multiline string'<CRLF>
+        "Multiline string\<CRLF>
+         Multiline string\<CRLF>
+         Multiline string"<CRLF>
       );<CRLF>
     });<CRLF>
   }<CRLF>
 );<CRLF>
 
 // Prettier stable
-const foo = bar((_0: baz) => {<CRLF>
-  setTimeout(() => {<CRLF>
-    /*<LF>
-          Multiline comment<LF>
-          Multiline comment<LF>
-          Multiline comment<LF>
+export const IAmIncredibleLongFunctionName = IAmAnotherFunctionName(<CRLF>
+  (_0: IAmIncredibleLongParameterType) => {<CRLF>
+    setTimeout(() => {<CRLF>
+      /*<LF>
+        Multiline comment<LF>
+        Multiline comment<LF>
+        Multiline comment<LF>
       */<CRLF>
-    console.log(<CRLF>
-      "Multiline string\\<LF>
-       Multiline string\\<LF>
-       Multiline string"<CRLF>
-    );<CRLF>
-  });<CRLF>
-});<CRLF>
+      console.log(<CRLF>
+        "Multiline string\<LF>
+         Multiline string\<LF>
+         Multiline string"<CRLF>
+      );<CRLF>
+    });<CRLF>
+  }<CRLF>
+);<CRLF>
 
-
-// Prettier master
-const foo = bar((_0: baz) => {<CRLF>
-  setTimeout(() => {<CRLF>
-    /*<CRLF>
-          Multiline comment<CRLF>
-          Multiline comment<CRLF>
-          Multiline comment<CRLF>
-      */<CRLF>
-    console.log(<CRLF>
-      "Multiline string\\<CRLF>
-       Multiline string\\<CRLF>
-       Multiline string"<CRLF>
-    );<CRLF>
-  });<CRLF>
-});<CRLF>
-
+// Prettier master: same as input
 ```
