--- a/changelog_unreleased/javascript/pr-6319.md
+++ b/changelog_unreleased/javascript/pr-6319.md
@@ -1,6 +1,9 @@
-#### Support the 'smart' pipeline operator proposal ([#6319](https://github.com/prettier/prettier/pull/6319) by [@sosukesuzuki](https://github.com/sosukesuzuki), [@thorn0](https://github.com/thorn0))
+#### Support the 'smart' and 'fsharp-style' pipeline operator proposal ([#6319](https://github.com/prettier/prettier/pull/6319) by [@sosukesuzuki](https://github.com/sosukesuzuki), [@thorn0](https://github.com/thorn0))
 
-[Link to the proposal](https://github.com/js-choi/proposal-smart-pipelines)
+- [Link to the 'smart' pipeline proposal](https://github.com/js-choi/proposal-smart-pipelines)
+- [Link to the 'fsharp-style' pipeline proposal](https://github.com/valtech-nyc/proposal-fsharp-pipelines)
+
+**Smart Pipeline:**
 
 <!-- prettier-ignore -->
 ```js
@@ -14,4 +17,20 @@ SyntaxError: Unexpected character '#' (1:6)
 
 // Output (Prettier master)
 5 |> # * 2
+```
+
+**F#-style Pipeline:**
+
+<!-- prettier-ignore -->
+```js
+// Input
+promises |> await;
+
+// Output (Prettier stable)
+SyntaxError: Unexpected token (1:18)
+> 1 | promises |> await;
+    |                  ^
+
+// Output (Prettier master)
+promises |> await;
 ```
