--- a/changelog_unreleased/javascript/pr-6319.md
+++ b/changelog_unreleased/javascript/pr-6319.md
@@ -1,4 +1,4 @@
-#### Support the 'smart' and 'fsharp-style' pipeline operator proposal ([#6319](https://github.com/prettier/prettier/pull/6319) by [@sosukesuzuki](https://github.com/sosukesuzuki), [@thorn0](https://github.com/thorn0))
+#### Support the 'smart' and 'fsharp-style' pipeline operator proposal ([#6319](https://github.com/prettier/prettier/pull/6319) by [@sosukesuzuki](https://github.com/sosukesuzuki), [@thorn0](https://github.com/thorn0), [#7979](https://github.com/prettier/prettier/pull/7979) by [@sosukesuzuki](https://github.com/sosukesuzuki))
 
 - [Link to the 'smart' pipeline proposal](https://github.com/js-choi/proposal-smart-pipelines)
 - [Link to the 'fsharp-style' pipeline proposal](https://github.com/valtech-nyc/proposal-fsharp-pipelines)
