--- a/tests/format/mdx/mdx/jsx.mdx
+++ b/tests/format/mdx/mdx/jsx.mdx
@@ -36,3 +36,11 @@
 | Column 1 | Column 2 |
 |---|---|
 | Text | <Hello>Text</Hello> |
+
+---
+
+A {/* JS-style comment */} comment.
+
+{
+  /* Another JS-style comment */
+}
