--- a/changelog_unreleased/html/11559.md
+++ b/changelog_unreleased/html/11559.md
@@ -8,14 +8,14 @@
 <!-- prettier-ignore -->
 ```html
 <!-- Input -->
-<div title='My title'></div>
-<div title="My title"></div>
+<div class='foo' title='My title'></div>
+<div class="foo" title="My title"></div>
 
 <!-- Prettier stable -->
-<div title="My title"></div>
-<div title="My title"></div>
+<div class="foo" title="My title"></div>
+<div class="foo" title="My title"></div>
 
 <!-- Prettier main -->
-<div title='My title'></div>
-<div title='My title'></div>
+<div class="foo" title='My title'></div>
+<div class="foo" title='My title'></div>
 ```
