Format class and srcset as well

--- a/changelog_unreleased/html/11559.md
+++ b/changelog_unreleased/html/11559.md
@@ -10,12 +10,18 @@
 <!-- Input -->
 <div class='foo' title='My title'></div>
 <div class="foo" title="My title"></div>
+<div class='foo "bar"' title='My "title"'></div>
+<div class="foo 'bar'" title="My 'title'"></div>
 
 <!-- Prettier stable -->
 <div class="foo" title="My title"></div>
 <div class="foo" title="My title"></div>
+<div class="foo &quot;bar&quot;" title='My "title"'></div>
+<div class="foo 'bar'" title="My 'title'"></div>
 
 <!-- Prettier main -->
-<div class="foo" title='My title'></div>
-<div class="foo" title='My title'></div>
+ <div class='foo' title='My title'></div>
+ <div class='foo' title='My title'></div>
+ <div class='foo "bar"' title='My "title"'></div>
+ <div class="foo 'bar'" title="My 'title'"></div>
 ```
