--- a/changelog_unreleased/mdx/11563.md
+++ b/changelog_unreleased/mdx/11563.md
@@ -1,7 +1,12 @@
 #### Add support for MDX 2 comments (#11563 by @wooorm)
 
-This adds support for MDX 2 comments (which are the same as other comments
-inside JSX) in addition to existing MDX 1 comments (HTML-like constructs).
+This adds basic support for MDX 2 comments (JavaScript-style comments) in
+addition to existing MDX 1 comments (HTML-style comments).
+
+Note that in MDX 2, more complex comments and whole expressions can be used
+inside braces.
+This currently only supports a single comment on one line so that
+`{/* prettier-ignore */}` can be used, but doesn’t support most of MDX 2.
 
 <!-- prettier-ignore -->
 ```mdx
