--- a/changelog_unreleased/javascript/11593.md
+++ b/changelog_unreleased/javascript/11593.md
@@ -1,4 +1,4 @@
-#### Title (#11593 by @bakkot)
+#### Fix parentheses around sequence expression as body of arrow chain (#11593 by @bakkot)
 
 The required parentheses around sequence expressions as the body of arrow functions were dropped for chained arrows, causing incorrect code to be generated. Now they are included.
 
