--- a/changelog_unreleased/cli/11693.md
+++ b/changelog_unreleased/cli/11693.md
@@ -1,5 +1,5 @@
 #### Support config files for Parcel, commitlint, PostCSS and PostHTML (#11693 by @thewilkybarkid)
 
-A `.parcelrc` file (without extension) is handled using the `json` parser.
+A `.parcelrc` file (without extension) is handled using the `json5` parser.
 
 `.commitlintrc`, `postcssrc` and `.posthtmlrc` files (without extensions) are handled using `json` and `yaml` parsers.
