--- a/changelog_unreleased/scss/11683.md
+++ b/changelog_unreleased/scss/11683.md
@@ -9,5 +9,8 @@
 TypeError: Cannot read properties of undefined (reading 'type')
 
 // Prettier main
-@forward "foo.scss" with ($components: red);
+@forward "foo.scss" with (
+  $components: red
+);
+
 ```
