--- a/changelog_unreleased/typescript/11721.md
+++ b/changelog_unreleased/typescript/11721.md
@@ -1,6 +1,23 @@
-#### Support TypeScript 4.5 (#11721 by @sosukesuzuki)
+#### Support TypeScript 4.5 (#11721, #11723 by @sosukesuzuki)
 
 Support new TypeScript 4.5 features.
+
+##### [`type` Modifiers on Import Names](https://devblogs.microsoft.com/typescript/announcing-typescript-4-5-beta/#type-on-import-names)
+
+Only supported by `babel-ts`.
+
+<!-- prettier-ignore -->
+```ts
+// Input
+import { type A } from "mod";
+
+// Prettier stable
+SyntaxError: ',' expected. (1:15)
+
+// Prettier main
+import { type A } from "mod";
+
+```
 
 ##### Handle `.mts` and `.cts`
 
