--- a/changelog_unreleased/javascript/11750.md
+++ b/changelog_unreleased/javascript/11750.md
@@ -1,4 +1,4 @@
-#### Fix errors on deleting variables (#11750 by @fisker)
+#### Ignore errors for non-strict mode features (#11750 by @fisker, #11778 by @sosukesuzuki)
 
 <!-- prettier-ignore -->
 ```jsx
