--- a/changelog_unreleased/typescript/11721.md
+++ b/changelog_unreleased/typescript/11721.md
@@ -1,4 +1,4 @@
-#### Support TypeScript 4.5 (#11721, #11723, #11813 by @sosukesuzuki)
+#### [HIGHLIGHT]Support TypeScript 4.5 (#11721, #11723, #11813 by @sosukesuzuki)
 
 Support new TypeScript 4.5 features.
 
