--- a/changelog_unreleased/html/11827.md
+++ b/changelog_unreleased/html/11827.md
@@ -1,1 +1,26 @@
 #### Reverts #7865, keeping class names on the same line (#11827 by @jlongster)
+
+<!-- prettier-ignore -->
+```html
+<!-- Input -->
+<div
+  class="SomeComponent__heading-row d-flex flex-column flex-lg-row justify-content-start justify-content-lg-between align-items-start align-items-lg-center"
+></div>
+
+<!-- Prettier stable -->
+<div
+  class="
+    SomeComponent__heading-row
+    d-flex
+    flex-column flex-lg-row
+    justify-content-start justify-content-lg-between
+    align-items-start align-items-lg-center
+  "
+></div>
+
+<!-- Prettier main -->
+<div
+  class="SomeComponent__heading-row d-flex flex-column flex-lg-row justify-content-start justify-content-lg-between align-items-start align-items-lg-center"
+></div>
+
+```
