--- a/changelog_unreleased/typescript/11717.md
+++ b/changelog_unreleased/typescript/11717.md
@@ -1,22 +1,31 @@
-#### Fix formatting for tagged template decorators (#11717 by @sosukesuzuki)
+#### Remove unnecessary parentheses for decorators (#11717, #11849 by @sosukesuzuki)
 
 <!-- prettier-ignore -->
 ```tsx
 // Input
 class Test {
   @foo`bar`
-  test: string = "test"
+  test1: string = "test"
+
+  @test().x("global").y()
+  test2: string = "test";
 }
 
 // Prettier stable
 class Test {
   @(foo`bar`)
   test: string = "test"
+
+  @(test().x("global").y())
+  test2: string = "test";
 }
 
 // Prettier main
 class Test {
   @foo`bar`
   test: string = "test"
+
+  @test().x("global").y()
+  test2: string = "test";
 }
 ```
